# docx2md

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
docx2md/: __main__.py  main.py
